github knitted version

--- a/notesChristine751Pm.Rmd
+++ b/notesChristine751Pm.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "notesChristine751pm"
-output:
-  pdf_document: default
-  html_document: default
+title: "Title"
+output: 
+  github_document: 
+    toc: true
 ---
 
 ```{r setup, include=FALSE}
